# displayer_win

./: CMakeLists.txt  main.cpp
include/: Displayer.h  Handler.h  Mode.h  Play.h  References.h
include/download/: DownloadURL.h
include/logger/: Logger.h
include/mode_states/: PlayState.h
include/singers/: Singer.h
include/songs/: PopSongs.h  Song.h
include/ui/: DIsplayUI.h
src/: Displayer.cpp  Handler.cpp  Mode.cpp  Play.cpp  main.cpp
src/download/: DownloadURL.cpp
src/logger/: Logger.cpp
src/singers/: Singer.cpp
src/songs/: PopSongs.cpp  Song.cpp
src/ui/: DisplayUI.cpp
test/: CMakeLists.txt  main.cpp
test/include/: References.h  TestPlay.h
test/src/: TestPlay.cpp
